device management: add default device feature
User can set one device as the default, which is on UI indicated by a
different icon (desktop with a tick on the bottom right, vs just a
desktop).
For now the only difference is that only the default device will have
its attributes (tree sub-items) expanded by default, while the others
are collapsed.

BUG=b:323976321
TEST=manual: set device as default from no default and another device
TEST=owned: https://screenshot.googleplex.com/3LqRfGmJkJw4rRH
TEST=leased: https://screenshot.googleplex.com/res5kF5Eabik4iK
TEST=npm t

Change-Id: Icfe35f251cfd75b4a68101977f2d9e40c164eff2
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/infra/ide/+/5303094
Commit-Queue: Grace Cham <hscham@chromium.org>
Reviewed-by: Keigo Oka <oka@chromium.org>
Auto-Submit: Grace Cham <hscham@chromium.org>
Tested-by: Grace Cham <hscham@chromium.org>

--- a/chromiumide/package.json
+++ b/chromiumide/package.json
@@ -84,6 +84,11 @@
         "title": "Generate C++ xrefs for the active file"
       },
       {
+        "command": "chromiumide.deviceManagement.setDefaultDevice",
+        "category": "CrOS",
+        "title": "Set as Default Device"
+      },
+      {
         "command": "chromiumide.deviceManagement.connectToDeviceForScreen",
         "category": "CrOS",
         "title": "Connect to Device (VNC)",
@@ -614,6 +619,11 @@
           "group": "inline"
         },
         {
+          "command": "chromiumide.deviceManagement.setDefaultDevice",
+          "when": "view == devices && viewItem =~ /^device-/ && !(viewItem =~ /-default$/)",
+          "group": "0_set"
+        },
+        {
           "command": "chromiumide.cppxrefs.forceGenerate",
           "when": "view == chromiumide-status && viewItem == cppxrefs",
           "group": "1_generate"
@@ -813,6 +823,10 @@
           "when": "false"
         },
         {
+          "command": "chromiumide.deviceManagement.setDefaultDevice",
+          "when": "false"
+        },
+        {
           "command": "chromiumide.deviceManagement.copyHostname",
           "when": "false"
         },
@@ -971,6 +985,10 @@
           "items": {
             "type": "string"
           }
+        },
+        "chromiumide.deviceManagement.default": {
+          "type": "string",
+          "description": "Hostname of the default device"
         },
         "chromiumide.deviceManagement.imageVersionMaxSkew": {
           "type": "number",
