Add minimatch dependency for matching glob patterns and run npm install
For cros format feature to determine if the target file should be
formatted or not (if it is in the relevant .presubmitignore).

The version is chosen  manually to make sure glob and minimatch are
compatible.  If installed with `npm install minimatch --save-prod`, the
types used by glob will be different from those exported from that
minimatch.

BUG=b:329601336
TEST=npm t

Change-Id: I1bbce49a234ab0d6a43dd465c928b86e11471956
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/infra/ide/+/5439515
Reviewed-by: Keigo Oka <oka@chromium.org>
Tested-by: Grace Cham <hscham@chromium.org>
Commit-Queue: Grace Cham <hscham@chromium.org>

--- a/chromiumide/package.json
+++ b/chromiumide/package.json
@@ -1479,8 +1479,9 @@
     "@mui/material": "^5.10.9",
     "@novnc/novnc": "^1.4.0",
     "date-fns": "^2.30.0",
-    "glob": "^7.1.7",
+    "glob": "^8.1.0",
     "js-base64": "^3.7.5",
+    "minimatch": "^5.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-virtuoso": "^4.0.3",
@@ -1493,7 +1494,7 @@
   },
   "devDependencies": {
     "@swc/core": "^1.3.100",
-    "@types/glob": "^7.1.4",
+    "@types/glob": "^8.1.0",
     "@types/jasmine": "^5.1.4",
     "@types/mock-fs": "^4.13.4",
     "@types/node": "18.15.0",
