device management: provide menu item to unset default device
BUG=b:334728700
TEST=npm t
TEST=https://screenshot.googleplex.com/5Cqm8o6BrHdtqNG

Change-Id: Id2b757955523d2d36015835b8b5b207b7789d249
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/infra/ide/+/5452606
Commit-Queue: Grace Cham <hscham@chromium.org>
Reviewed-by: Shuhei Takahashi <nya@chromium.org>
Auto-Submit: Grace Cham <hscham@chromium.org>
Tested-by: Grace Cham <hscham@chromium.org>

--- a/chromiumide/package.json
+++ b/chromiumide/package.json
@@ -89,6 +89,11 @@
         "title": "Set as Default Device"
       },
       {
+        "command": "chromiumide.deviceManagement.unsetDefaultDevice",
+        "category": "CrOS",
+        "title": "Unset Default Device"
+      },
+      {
         "command": "chromiumide.deviceManagement.connectToDeviceForScreen",
         "category": "CrOS",
         "title": "Connect to Device (VNC)",
@@ -635,6 +640,11 @@
           "group": "0_set"
         },
         {
+          "command": "chromiumide.deviceManagement.unsetDefaultDevice",
+          "when": "view == devices && viewItem =~ /^device-/ && viewItem =~ /-default$/",
+          "group": "0_set"
+        },
+        {
           "command": "chromiumide.cppxrefs.forceGenerate",
           "when": "view == chromiumide-status && viewItem == cppxrefs",
           "group": "1_generate"
@@ -839,6 +849,10 @@
         },
         {
           "command": "chromiumide.deviceManagement.setDefaultDevice",
+          "when": "false"
+        },
+        {
+          "command": "chromiumide.deviceManagement.unsetDefaultDevice",
           "when": "false"
         },
         {
