seamless deployment: extract config related to feature
To prepare for next changes that introduce more specific to seamless
deployment (flag to enable auto check and flag to prompt it).

BUG=b:335359870
TEST=npm t

Change-Id: Ia8061ed1653dc44ab9c54ca63ecea0a9f3e775d6
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/infra/ide/+/5492800
Commit-Queue: Grace Cham <hscham@chromium.org>
Tested-by: Grace Cham <hscham@chromium.org>
Auto-Submit: Grace Cham <hscham@chromium.org>
Reviewed-by: Keigo Oka <oka@chromium.org>

--- a/chromiumide/package.json
+++ b/chromiumide/package.json
@@ -1019,7 +1019,7 @@
           "type": "string",
           "description": "Hostname of the default device"
         },
-        "chromiumide.deviceManagement.imageVersionMaxSkew": {
+        "chromiumide.seamlessDeployment.imageVersionMaxSkew": {
           "type": "number",
           "description": "The maximum difference in CrOS major version for device and local image above which warning would be shown.",
           "default": 7
