crosfleet: Introduce a setting to use a pinned crosfleet
The new setting defaults to false, so this patch effectively unpins
crosfleet because -json option was restored in the latest version.

BUG=b:311558537
TEST=npm t
TEST=Try leasing a device from UI
TEST=Try abandoning a leased device from UI
TEST=Toggle the setting and reload the window

Change-Id: Ibc8cfd4118149385da17deb88838c945e2e2772a
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/infra/ide/+/5547239
Commit-Queue: Shuhei Takahashi <nya@chromium.org>
Tested-by: Shuhei Takahashi <nya@chromium.org>
Reviewed-by: Keigo Oka <oka@chromium.org>

--- a/chromiumide/package.json
+++ b/chromiumide/package.json
@@ -1001,6 +1001,11 @@
           "description": "Format files with 'cros format'",
           "default": true
         },
+        "chromiumide.deviceManagement.usePinnedCrosfleet": {
+          "type": "boolean",
+          "description": "Uses a pinned version of crosfleet as a temporary workaround for crosfleet API issues.",
+          "default": false
+        },
         "chromiumide.deviceManagement.devices": {
           "type": "array",
           "scope": "machine-overridable",
