eslint: Enforce to prefer Cros over CrOs
BUG=b:324502172
FIXED=b:324502172
TEST=npm t

Change-Id: I968147ee5328e2ab7892af13c396b31c531d5cc3
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/infra/ide/+/5547573
Reviewed-by: Grace Cham <hscham@chromium.org>
Tested-by: Keigo Oka <oka@chromium.org>
Commit-Queue: Keigo Oka <oka@chromium.org>

--- a/chromiumide/package.json
+++ b/chromiumide/package.json
@@ -197,7 +197,7 @@
         "title": "Copy Model"
       },
       {
-        "command": "chromiumide.deviceManagement.copyCrOsReleaseVersion",
+        "command": "chromiumide.deviceManagement.copyCrosReleaseVersion",
         "category": "CrOS",
         "title": "Copy CrOS Release Version"
       },
@@ -719,7 +719,7 @@
           "group": "8_copy"
         },
         {
-          "command": "chromiumide.deviceManagement.copyCrOsReleaseVersion",
+          "command": "chromiumide.deviceManagement.copyCrosReleaseVersion",
           "when": "view == devices && viewItem == 'CrOS release version'",
           "group": "8_copy"
         },
@@ -862,7 +862,7 @@
           "when": "false"
         },
         {
-          "command": "chromiumide.deviceManagement.copyCrOsReleaseVersion",
+          "command": "chromiumide.deviceManagement.copyCrosReleaseVersion",
           "when": "false"
         },
         {
