cros format: suggest setting it as default formatter in CrOS workspace
The vscode.editor.defaultFormatter setting will be updated only for the
workspace to avoid polluting user settings, especially when they are
working on non-CrOS repo (there is no option to set the default
formatter by file path/ pattern).
User could choose to silent the suggestion and will never see it
(global, or workspace only). Do nothing if they dismiss the message.

Update fake configuration for testing to return correct default value.

BUG=b:343089104
TEST=manual: open CrOS workspace/ existing CrOS file, see prompt
TEST=manual: select 'Yes' changes workspace defaultFormatter value
TEST=manual: select "Don't ask again in this workspace", \
     reload window, no prompt; open new workspace in CrOS, prompted
TEST=manual: select "Never ask again", no prompt in same and new \
     workspace
TEST=npm t

Change-Id: Ib430454b5bb74978d2f5f4165c3ae84fe7f80a99
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/infra/ide/+/5578624
Tested-by: Grace Cham <hscham@chromium.org>
Commit-Queue: Grace Cham <hscham@chromium.org>
Reviewed-by: Keigo Oka <oka@chromium.org>

--- a/chromiumide/package.json
+++ b/chromiumide/package.json
@@ -1016,6 +1016,11 @@
           "description": "Link to the hash of the current revision instead of TOT",
           "default": false
         },
+        "chromiumide.crosFormat.suggestSetAsDefault": {
+          "type": "boolean",
+          "description": "Suggest user to set ChromiumIDE as the workspace default formatter",
+          "default": true
+        },
         "chromiumide.deviceManagement.usePinnedCrosfleet": {
           "type": "boolean",
           "description": "Uses a pinned version of crosfleet as a temporary workaround for crosfleet API issues.",
