format: Add command to forcibly format the active file
update comment

Inspired by the pretter's command for force-formatting the active file,
add chromiumide the command to format the file with cros format even if
the file is .presubmitignore-ed.

BUG=b:337139742
TEST=npm t

Change-Id: If564d24e86634ee6ad223431d278b645ebe8af0d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/infra/ide/+/5612790
Tested-by: Keigo Oka <oka@chromium.org>
Reviewed-by: Grace Cham <hscham@chromium.org>
Commit-Queue: Keigo Oka <oka@chromium.org>

--- a/chromiumide/package.json
+++ b/chromiumide/package.json
@@ -99,6 +99,11 @@
         "title": "Generate C++ xrefs for the active file"
       },
       {
+        "command": "chromiumide.crosFormat.forceFormat",
+        "category": "CrOS",
+        "title": "Format Document (Forced)"
+      },
+      {
         "command": "chromiumide.deviceManagement.setDefaultDevice",
         "category": "CrOS",
         "title": "Set as Default Device"
