ui: cpp xrefs regenerate command available on hover status tree item
Previously user had to invoke the command by right click on the status
tree item and select from the menu, which might have discoverability
issue.
Now they will see the refresh icon shown inline at the item when hovered
over the "C++ xrefs generation" line, and click on the refresh icon will
kick start the force generate command.

BUG=b:345622866
FIXED=b:345622866
TEST=https://screenshot.googleplex.com/9vcwaCXjfeYt8Ed

Change-Id: I80508c418a31034107d34129abfdaa0145b8e989
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/infra/ide/+/5620271
Auto-Submit: Grace Cham <hscham@chromium.org>
Tested-by: Grace Cham <hscham@chromium.org>
Reviewed-by: Keigo Oka <oka@chromium.org>
Commit-Queue: Keigo Oka <oka@chromium.org>

--- a/chromiumide/package.json
+++ b/chromiumide/package.json
@@ -96,7 +96,8 @@
       {
         "command": "chromiumide.cppxrefs.forceGenerate",
         "category": "CrOS",
-        "title": "Generate C++ xrefs for the active file"
+        "title": "Generate C++ xrefs for the active file",
+        "icon": "$(refresh)"
       },
       {
         "command": "chromiumide.crosFormat.forceFormat",
@@ -696,7 +697,7 @@
         {
           "command": "chromiumide.cppxrefs.forceGenerate",
           "when": "view == chromiumide-status && viewItem == cppxrefs",
-          "group": "1_generate"
+          "group": "inline"
         },
         {
           "command": "chromiumide.deviceManagement.connectToDeviceForScreen",
