Add a command to run unit tests in paralell as an experiment
root_cause_flakiness.ts should be updated as a follow up to support the
parallel mode so we can diagnose flakiness if happens.

BUG=b:346849057
TEST=time npm run unit-test          # 42.314 total
TEST=time npm run unit-test-parallel # 11.625 total

Change-Id: I8f0711dd4e291396a22c248d8d86be2e00684737
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/infra/ide/+/5628232
Reviewed-by: Grace Cham <hscham@chromium.org>
Tested-by: Keigo Oka <oka@chromium.org>
Commit-Queue: Keigo Oka <oka@chromium.org>

--- a/chromiumide/package.json
+++ b/chromiumide/package.json
@@ -1448,6 +1448,7 @@
     "test": "wireit",
     "cq-test": "wireit",
     "unit-test": "wireit",
+    "unit-test-parallel": "wireit",
     "integration-test": "wireit",
     "e2e-test": "wireit",
     "lint": "wireit",
@@ -1568,6 +1569,12 @@
       "env": {
         "NODE_PATH": "out/src/test/unit/injected_modules"
       },
+      "dependencies": [
+        "build-tests"
+      ]
+    },
+    "unit-test-parallel": {
+      "command": "./tools/run_unit_tests_in_parallel.sh",
       "dependencies": [
         "build-tests"
       ]
