Add syntax highlighting for getTrustedHTML
Adds syntax highlighting for Embedded HTML
in ts/js using getTrustedHTML.

BUG=b:347589993
TEST=None

Change-Id: I7a2c2b91988843f90a67105622a2b891f7cc82c5
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/infra/ide/+/5635134
Reviewed-by: Keigo Oka <oka@chromium.org>
Tested-by: Dan H <harringtond@chromium.org>
Commit-Queue: Dan H <harringtond@chromium.org>

--- a/chromiumide/package.json
+++ b/chromiumide/package.json
@@ -1385,6 +1385,17 @@
         "language": "portage",
         "scopeName": "source.portage",
         "path": "./languages/portage.tmLanguage.json"
+      },
+      {
+        "injectTo": [
+          "source.js",
+          "source.ts"
+        ],
+        "scopeName": "inline.embedded-trusted-html",
+        "path": "./languages/embedded-html.json",
+        "embeddedLanguages": {
+          "meta.embedded.block.basic": "html"
+        }
       }
     ],
     "taskDefinitions": [
