Let .gclient be detected as python
BUG=b:348087091
FIXED=b:348087091
TEST=open chromium/.gclient, confirm the language is python

Change-Id: I4886d5183fde63912b13891e6a47d65c8a126d3a
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/infra/ide/+/5641918
Auto-Submit: Keigo Oka <oka@chromium.org>
Reviewed-by: Grace Cham <hscham@chromium.org>
Tested-by: Keigo Oka <oka@chromium.org>
Commit-Queue: Grace Cham <hscham@chromium.org>

--- a/chromiumide/package.json
+++ b/chromiumide/package.json
@@ -1251,6 +1251,12 @@
     },
     "languages": [
       {
+        "id": "python",
+        "extensions": [
+          ".gclient"
+        ]
+      },
+      {
         "id": "shellscript",
         "extensions": [
           ".eclass"
