Revert the change to use unit-test-parallel in npm t
`npm t` is run before automated pre-release, but it is flaky due to
unit-test-parallel now.

BUG=b:348999929
TEST=npm t

Change-Id: Ibf587816c12482a426298b588b9c0e0359e6c648
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/infra/ide/+/5644677
Reviewed-by: Grace Cham <hscham@chromium.org>
Auto-Submit: Keigo Oka <oka@chromium.org>
Commit-Queue: Grace Cham <hscham@chromium.org>
Tested-by: Keigo Oka <oka@chromium.org>

--- a/chromiumide/package.json
+++ b/chromiumide/package.json
@@ -1555,7 +1555,7 @@
     },
     "test": {
       "dependencies": [
-        "unit-test-parallel",
+        "unit-test",
         "integration-test",
         "check",
         "lint"
