ide: Enable Chromium Java support by default
Removes chromiumide.underDevelopment.chromiumJavaSupport, and instead
introduces chromiumide.chromium.java.enabled that is enabled by default
so that users can disable it if they like to.

Also changes java.active() to return void instead of Promise<void>.

BUG=None
TEST=npm t
TEST=manually toggle the setting to make sure we can disable it

Change-Id: I9b77963b7e853303099e9c40eba3713699156966
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/infra/ide/+/6169775
Tested-by: Shuhei Takahashi <nya@chromium.org>
Reviewed-by: Keigo Oka <oka@chromium.org>
Commit-Queue: Keigo Oka <oka@chromium.org>
Auto-Submit: Shuhei Takahashi <nya@chromium.org>
Commit-Queue: Shuhei Takahashi <nya@chromium.org>

--- a/chromiumide/package.json
+++ b/chromiumide/package.json
@@ -1074,6 +1074,11 @@
           "default": true,
           "description": "Control whether tests should be run in parallel and be retried once on failure. This uses the `--test-launcher-bot-mode` flag."
         },
+        "chromiumide.chromium.java.enabled": {
+          "type": "boolean",
+          "description": "Enable Chromium Java support",
+          "default": true
+        },
         "chromiumide.chromium.java.trace.server": {
           "type": "string",
           "enum": [
@@ -1232,11 +1237,6 @@
         "chromiumide.underDevelopment.chromiumBuild": {
           "type": "boolean",
           "description": "Enable build + deploy for chromium code (incomplete)",
-          "default": false
-        },
-        "chromiumide.underDevelopment.chromiumJavaSupport": {
-          "type": "boolean",
-          "description": "Enable Chromium Java support",
           "default": false
         },
         "chromiumide.underDevelopment.platform2GtestDebugging": {
