ide: java: Support jumping to JNI definitions
This patch adds code lens to JNI Zero interface methods that allow
jumping to corresponding C++ implementations.

http://screen/79d7c7kCrtiLqvM

BUG=None
TEST=npm t

Change-Id: I211fc7557edaeaf313dadeef365b6cc09d754753
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/infra/ide/+/6181468
Commit-Queue: Shuhei Takahashi <nya@chromium.org>
Tested-by: Shuhei Takahashi <nya@chromium.org>
Reviewed-by: Keigo Oka <oka@chromium.org>

--- a/chromiumide/package.json
+++ b/chromiumide/package.json
@@ -1668,6 +1668,7 @@
     }
   },
   "dependencies": {
+    "@clangd/vscode-clangd": "^0.0.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.10.9",
     "@novnc/novnc": "^1.4.0",
