related files: Enable by default
This feature has been under a flag, but it seems it's already stable.

BUG=b:393215879
TEST=npm t
TEST=manually open a few files and confirm the links work as expected

Change-Id: Ie22785193da43e8f092bcbabe5028bbc60755359
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/infra/ide/+/6217721
Auto-Submit: Keigo Oka <oka@chromium.org>
Tested-by: Keigo Oka <oka@chromium.org>
Reviewed-by: Shuhei Takahashi <nya@chromium.org>
Commit-Queue: Shuhei Takahashi <nya@chromium.org>

--- a/chromiumide/package.json
+++ b/chromiumide/package.json
@@ -392,8 +392,7 @@
       },
       {
         "command": "chromiumide.relatedFiles.create",
-        "title": "Create related file",
-        "enablement": "config.chromiumide.underDevelopment.relatedFiles"
+        "title": "Create related file"
       },
       {
         "command": "chromiumide.showHelpForBoardsAndPackages",
@@ -1252,11 +1251,6 @@
         "chromiumide.underDevelopment.platformEC": {
           "type": "boolean",
           "description": "Enable Platform EC support (under development)",
-          "default": false
-        },
-        "chromiumide.underDevelopment.relatedFiles": {
-          "type": "boolean",
-          "description": "Enable buttons at the top of each C++ file to create/open related files, such as test and header files (under development, and Chromium-only for now)",
           "default": false
         },
         "chromiumide.underDevelopment.remoteDebug": {
