gerrit: Introduce auth client interface
Make the auth client substitutable to support sso auth in subsequent
changes. This change also introduces the axios library and use it for
calling Gerrit APIs. This makes introducing another client using axios
easy. We want to use axios for calling Gerrit APIs through a local proxy
server as demanded by the sso auth protocol.

Bug: 406097179
Change-Id: Iaa0981f817467978d14c832d1126a3e97960cbee
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/infra/ide/+/6458091
Commit-Queue: Keigo Oka <oka@chromium.org>
Reviewed-by: Eric Lok <lokeric@google.com>
Tested-by: Keigo Oka <oka@chromium.org>

--- a/chromiumide/package.json
+++ b/chromiumide/package.json
@@ -1714,6 +1714,7 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.10.9",
     "@novnc/novnc": "^1.4.0",
+    "axios": "^1.8.4",
     "date-fns": "^2.30.0",
     "glob": "^8.1.0",
     "js-base64": "^3.7.5",
@@ -1750,6 +1751,7 @@
     "@vscode/codicons": "^0.0.35",
     "@vscode/test-electron": "^2.3.8",
     "@vscode/vsce": "^2.22.0",
+    "axios-mock-adapter": "1.22",
     "copy-webpack-plugin": "^11.0.0",
     "dedent": "^1.5.1",
     "esbuild": "^0.19.9",
