--- a/.github/workflows/cq.yml
+++ b/.github/workflows/cq.yml
@@ -82,13 +82,14 @@ jobs:
       - uses: actions/attest-build-provenance@v3
         with:
           subject-path: artifacts/*
+        if: github.event_name == 'push'
 
   upload-release-artifacts:
     runs-on: ubuntu-latest
     permissions:
       contents: write
     needs:
-      - build
+      - attestation
       - test
     steps:
       - uses: actions/checkout@v4
@@ -103,7 +104,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         if: startsWith(github.ref, 'refs/tags/v')
 
-  publish:
+  publish-to-marketplaces:
     runs-on: ubuntu-latest
     needs:
       - upload-release-artifacts
