--- a/.github/workflows/cq.yml
+++ b/.github/workflows/cq.yml
@@ -121,7 +121,7 @@ jobs:
         working-directory: artifacts
       - run: npm ci
         if: startsWith(github.ref, 'refs/tags/v')
-      - run: npx -y vsce publish --pat ${{ secrets.VSCE_PAT }} $(node tools/release_flag.js) --packagePath *.vsix
+      - run: npx -y vsce publish --pat ${{ secrets.VSCE_PAT }} $(node tools/release_flag.js) --packagePath artifacts/*.vsix
         if: startsWith(github.ref, 'refs/tags/v')
-      - run: npx -y ovsx publish --pat ${{ secrets.OVSX_PAT }} $(node tools/release_flag.js) --packagePath *.vsix
+      - run: npx -y ovsx publish --pat ${{ secrets.OVSX_PAT }} $(node tools/release_flag.js) --packagePath artifacts/*.vsix
         if: startsWith(github.ref, 'refs/tags/v')
