--- a/.github/workflows/cq.yml
+++ b/.github/workflows/cq.yml
@@ -99,7 +99,7 @@ jobs:
           merge-multiple: true
       - run: ls -lR .
         working-directory: artifacts
-      - run: gh release upload "${{ github.ref_name }}" artifacts/*
+      - run: gh release upload "${GITHUB_REF_NAME}" artifacts/*
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         if: startsWith(github.ref, 'refs/tags/v')
